--- a/assets/charts/zatrudnienie.html
+++ b/assets/charts/zatrudnienie.html
@@ -26,13 +26,13 @@ var pie = new d3pie("pieChart", {
 		"location": "pie-center",
 		"titleSubtitlePadding": 10
 	},
-	// "footer": {
-	// 	"color": "#999999",
-	// 	"fontSize": 10,
-	// 	"font": "open sans",
-	// 	"location": "bottom-left",
-  //       "text": "Źródło: GUS, Rocznik statystyczny przemysłu (2018) i  Dane wewnętrzne GK Polpharma."
-	// },
+	"footer": {
+		"color": "#999999",
+		"fontSize": 10,
+		"font": "helvetica",
+		"location": "bottom-left",
+        "text": "Źródło: GUS, Rocznik statystyczny przemysłu (2018) i  Dane wewnętrzne GK Polpharma."
+	},
 	"size": {
 		"canvasWidth": 500,
 		"pieInnerRadius": "90%",
