--- a/index.html
+++ b/index.html
@@ -1164,130 +1164,130 @@ będą stanowiły właśnie leki generyczne. </p>
                           datasets: [
                             {
                               label: ["Austria"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(255,221,50,1)",
                               data: [{
                                 x: 38,
                                 y: 18,
-                                r: 3550/8633169*1e5
+                                r: Math.round(3550/8633169*1e5)
 
                               }]
                             }, {
                               label: ["Belgia"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(60,186,159,1)",
                               data: [{
                                 x: 39,
                                 y: 13,
-                                r: 4708/11274196*1e5
+                                r: Math.round(4708/11274196*1e5)
                               }]
                             }, {
                               label: ["Czechy"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "#000",
                               data: [{
                                 x: 60,
                                 y: 30,
-                                r: 2290/10546059*1e5
+                                r: Math.round(2290/10546059*1e5)
                               }]
                             }, {
                               label: ["Dania"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 60,
                                 y: 14,
-                                r: 2306/5683483*1e5
+                                r: Math.round(2306/5683483*1e5)
                               }]
                             },
                             {
                               label: ["Finlandia"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 48,
                                 y: 19,
-                                r: 2246/5479531*1e5
+                                r: Math.round(2246/5479531*1e5)
                               }]
                             },
                             {
                               label: ["Francja"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 52,
                                 y: 22,
-                                r: 27645/66624068*1e5
+                                r: Math.round(27645/66624068*1e5)
                               }]
                             },
                             {
                               label: ["Niemcy"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 73,
                                 y: 20,
-                                r: 30038/81686611*1e5
+                                r: Math.round(30038/81686611*1e5)
                               }]
                             },
                             {
                               label: ["Grecja"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 27,
                                 y: 19,
-                                r: 4058/10820883*1e5
+                                r: Math.round(4058/10820883*1e5)
                               }]
                             },
                             {
                               label: ["Węgry"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 53,
                                 y: 27,
-                                r: 2133/9843028*1e5
+                                r: Math.round(2133/9843028*1e5)
                               }]
                             },
                             {
                               label: ["Irlandia"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 49,
                                 y: 22,
-                                r: 1818/4676835*1e5
+                                r: Math.round(1818/4676835*1e5)
                               }]
                             },
                             {
                               label: ["Włochy"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 41,
                                 y: 16,
-                                r: 22703/60730582*1e5
+                                r: Math.round(22703/60730582*1e5)
                               }]
                             },
                             {
                               label: ["Łotwa"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 75,
                                 y: 45,
-                                r: 238/1977527*1e5
+                                r: Math.round(238/1977527*1e5)
                               }]
                             },
                             {
                               label: ["Holandia"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 66,
                                 y: 22,
-                                r: 4821/16939923*1e5
+                                r: Math.round(4821/16939923*1e5)
                               }]
                             },
                             {
@@ -1297,57 +1297,57 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 69,
                                 y: 41,
-                                r: 5587/37986412*1e5
+                                r: Math.round(5587/37986412*1e5)
                               }]
                             },
                             {
                               label: ["Portugalia"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 50,
                                 y: 30,
-                                r: 2933/10358076*1e5
+                                r: Math.round(2933/10358076*1e5)
                               }]
                             },
                             {
                               label: ["Słowacja"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 57,
                                 y: 23,
-                                r: 1184/5423801*1e5
+                                r: Math.round(1184/5423801*1e5)
                               }]
                             },
                             {
                               label: ["Hiszpania"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 51,
                                 y: 18,
-                                r: 15625/46447697*1e5
+                                r: Math.round(15625/46447697*1e5)
                               }]
                             },
                             {
                               label: ["Szwecja"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 55,
                                 y: 13,
-                                r: 3809/9799186*1e5
+                                r: Math.round(3809/9799186*1e5)
                               }]
                             },
                             {
                               label: ["Wielka Brytania"],
-                              backgroundColor: "#aaf3f7",
+                              backgroundColor: "#94bde5",
                               // borderColor: "rgba(193,46,12,1)",
                               data: [{
                                 x: 66,
                                 y: 27,
-                                r: 22375/65128861*1e5
+                                r: Math.round(22375/65128861*1e5)
                               }]
                             }
                           ]
@@ -1463,42 +1463,6 @@ do poprawy ogólnej sytuacji społecznej i jakości życia.</p>
     <iframe class="embed-responsive-item" src="./assets/charts/zatrudnienie.html" allowfullscreen></iframe>
 </div>
 
-<div id="nav-tabs2">
-          <div class="col-md-6">
-
-              <div class="card card-nav-tabs">
-                  <div class="card-header card-header-default">
-                      <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
-                      <div class="nav-tabs-navigation">
-                          <div class="nav-tabs-wrapper">
-                              <ul class="nav nav-tabs" data-tabs="tabs">
-                                  <!-- <li class="nav-item">
-                                      <a class="nav-link active" href="#info8" data-toggle="tab">
-                                          <i class="material-icons">info_outline</i> Informacje
-                                      </a>
-                                  </li> -->
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="#zrodlo_zat" data-toggle="tab">
-                                          <i class="material-icons">input</i> Źródło
-                                      </a>
-                                  </li>
-                              </ul>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="card-body ">
-                      <div class="tab-content">
-
-                          <div class="tab-pane active" id="zrodlo_zat">
-                          <h5>
-                              &#9758; Dane wewnętrzne Polpharma.
-                            </h5>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-</div>
 
 <p align="justify">Dla rozwoju polskiej gospodarki
 kluczowe jest tworzenie popytu na miejsca pracy wymagające
