--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                 <ul class="navbar-nav ml-auto">
                     <li class="dropdown nav-item">
                         <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            <i class="material-icons">bookmark_border</i> Rozdziały
+                            <i class="material-icons">bookmark_border</i> Tematy
                         </a>
                         <div class="dropdown-menu dropdown-with-icons">
                             <a href="#innowacje" class="dropdown-item">
@@ -937,7 +937,7 @@ przejaw swoistej odpowiedzialności społecznej – są to w większości leki
 niskomarżowe (firma czerpie z nich relatywnie mniejszy zysk).</p></br></br>
 
 
-      <p>Możliwości upowszechnienia terapii i obniżenia
+      <p align="justify">Możliwości upowszechnienia terapii i obniżenia
 jej kosztów, jakie realnie otwiera produkcja generyczna,
 zostały dostrzeżone i docenione także w krajach wysokorozwiniętych.
 Najlepszym dowodem są tutaj polityki
