--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@ działania i zapewnia osiąganie wzrostu sprzedaży leków.</p>
 </div>
 
             <div class="section text-center">
-                <h2 class="title">Autorzy<hr></h2>
+                <h2 class="title">Autorzy</h2>
                 <div class="team">
                     <div class="row">
                         <div class="col-md-4">
