--- a/index.html
+++ b/index.html
@@ -697,6 +697,52 @@ Kolejną pułapką jest niewłaściwe rozumienie innowacyjności w procesie wytw
 </button>
 </div>
 
+
+</br></br>
+<h3>W stronę Przemysłu 4.0.</h3>
+<p align="justify">
+W przypadku produkcji farmaceutycznej proces
+dostosowania do dzisiejszych standardów Przemysłu
+4.0 zaczął się wcześniej niż w wielu innych sektorach
+– głównie za sprawą wysokich standardów bezpieczeństwa
+i parametrów jakości. Warto pamiętać, że
+postęp w obszarze technologii cyfrowych niesie ze
+sobą głęboką rewolucję w funkcjonowaniu przedsiębiorstw,
+prowadząc do powstania nowych modeli
+biznesowych. Nie chodzi już tylko o roboty zatrudnione
+do produkcji przemysłowej, systemy informacyjne
+w zarządzaniu i sieć internetową w komunikacji, lecz
+przede wszystkim o połączenia pomiędzy nimi. Tych
+zaś pojawia się coraz więcej dzięki wszechobecnym
+sensorom i wymianie danych. Żyjemy w czasach coraz
+intensywniejszego usieciowienia i „rozmawiania ze
+sobą” produktów, usług oraz całej gamy urządzeń
+(np. produkujących, kontrolujących, mierzących itp.).
+W minionych dziesięcioleciach wiele z nich działało
+osobno, lub było zintegrowanych tylko w wąskim
+zakresie. Tymczasem dzisiejszy świat staje się coraz
+bardziej połączeniem ludzi, przedmiotów i maszyn w
+tzw. Internecie rzeczy (Internet of Things).
+</p>
+</br>
+<img src="./assets/img/ind.svg">
+</br>
+<p align="justify">
+  Polpharma jest jedną z pierwszych firm w regionie,
+  która zaczęła wdrażać komputerowe systemy
+  usprawniające produkcję, logistykę, zarządzanie zasobami
+  i integrację międzynarodową. Inwestycje w
+  unowocześnione systemy technologiczne przyczyniają
+  się do stymulacji działań innych polskich producentów,
+  zwiększając konkurencyjność całej polskiej branży
+  farmaceutycznej na rynku globalnym.
+  W przypadku Polpharmy uwidacznia się również
+  rola, jaką w procesie cyfryzacji każdej organizacji
+  odgrywają tzw. e-liderzy: menedżerowie wyższego
+  i średniego szczebla, którzy rozumieją wagę zmian,
+  jakie nowe technologie wnoszą we wszystkie obszary
+  funkcjonowania firmy.
+</p>
 </div>
 
 <div class="container">
