--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@ prace nad nowymi sposobami leczenia chorób rzadko występujących.</p>
 new Chart(document.getElementById("polar-chart"), {
 type: 'polarArea',
 data: {
-labels: ["R0 RESPIRATORY SYSTEM","N0 NERVOUS SYSTEM","A0 ALIMENTARY T.& METABOLISM","J0 SYSTEMIC ANTI-INFECTIVES","C0 CARDIOVASCULAR SYSTEM","S0 SENSORY ORGANS"],
+labels: ["Układ oddechowy","System nerwowy","Przewód pokarmowy i metabolizm","Antybiotyki systematyczne","Układ sercowo-naczyniowy","Układ czuciowy"],
 datasets: [
   {
     label: "",
