--- a/index.html
+++ b/index.html
@@ -1830,9 +1830,36 @@ własne przedstawicielstwa handlowe lub lokalnych dystrybutorów
 leków eksportowanych z Polski. Taka
 strategia rozwoju gwarantuje Polpharmie elastyczność
 działania i zapewnia osiąganie wzrostu sprzedaży leków.</p>
-                            </div>
 
 
+</br></br>
+<div class="section text-center">
+<h1>Wnioski z raportu<hr></h1>
+</div>
+
+</br>
+
+<p align="justify">
+<h4>&#9758; Polpharma należy do czołówki polskich firm budujących innowacyjną gospodarkę: konsekwentnie inwestuje
+w badania i rozwój, również w obszarze biotechnologii, i elastycznie reaguje na najnowsze trendy
+technologiczne, odważnie wprowadzając innowacje procesowe i organizacyjne.</h4></br>
+<h4>&#9758; W raporcie akcentujemy znaczenie strategii produkcyjnej Polpharmy, która skupia się na wytwarzaniu
+podstawowych i zaawansowanych leków równoważnych, by zapewnić bezpieczeństwo lekowe kraju. W
+portfolio produktowym firmy znajdują się niedrogie i dobrej jakości leki stosowane w terapii schorzeń
+dotykających miliony Polaków; będzie to miało coraz większe znaczenie z perspektywy zmian demograficznych,
+generujących rosnące koszty dla publicznej służby zdrowia.</h4></br>
+<h4>&#9758; Pokazujemy również, w jaki sposób Polpharma, firma o wieloletniej tradycji, reaguje na radykalne zmiany
+związane z rozwojem nowych technologii: wprowadzając szeroko zakrojone innowacje organizacyjne
+i strategicznie inwestując w kompetencje obecnych i przyszłych pracowników. Dynamika transformacji
+cyfrowej Polpharmy jest zbieżna ze światowym trendem budowania przemysłu farmaceutycznego 4.0.
+skupionego na potrzebach pacjenta i szeroko wykorzystującego możliwości sztucznej inteligencji, chmury
+obliczeniowej, rozwiązań blockchainowych i innych innowacji.</h4></br>
+<h4>&#9758; Stabilny rozwój Polpharmy, sprzyjający utrzymaniu bezpieczeństwa lekowego kraju i rosnącej konkurencyjności
+na rynkach międzynarodowych, zależy od strategii rozwoju przemysłu farmaceutycznego w
+Polsce. Strategia ta powinna uwzględniać szerokie i nowatorskie rozumienie specyfiki innowacyjności
+sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społecznymi.</h4></br>
+</p>
+</div>
 
                             <div class="container">
                               <div class="section text-center">
