--- a/index.html
+++ b/index.html
@@ -1931,9 +1931,9 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                                             <a href="#">links</a> for people to be able to follow them outside the site.</p>
                                     </div> -->
                                     <div class="card-footer justify-content-center">
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
+                                        <a target="_blank" href="https://twitter.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -1953,8 +1953,10 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                                             <a href="#">links</a> for people to be able to follow them outside the site.</p>
                                     </div> -->
                                     <div class="card-footer justify-content-center">
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-linkedin"></i></a>
+                                      <a target="_blank" href="https://twitter.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
+
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-linkedin"></i></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -1994,9 +1996,11 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                                     </div> -->
 
                                     <div class="card-footer justify-content-center">
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
+                                      <a target="_blank" href="https://twitter.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
+
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -2018,9 +2022,11 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                                     </div> -->
 
                                     <div class="card-footer justify-content-center">
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
+                                      <a target="_blank" href="https://twitter.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
+
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -2037,9 +2043,11 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                                     </h4>
 
                                     <div class="card-footer justify-content-center">
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
-                                        <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
+                                      <a target="_blank" href="https://twitter.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
+
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a> -->
+                                        <!-- <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a> -->
                                     </div>
                                 </div>
                             </div>
