--- a/index.html
+++ b/index.html
@@ -1630,12 +1630,12 @@ new Chart(document.getElementById("bar-chart-grouped2"), {
                           <div class="nav-tabs-wrapper">
                               <ul class="nav nav-tabs" data-tabs="tabs">
                                   <li class="nav-item">
-                                      <a class="nav-link active" href="#info10" data-toggle="tab">
+                                      <a class="nav-link active" href="#info100" data-toggle="tab">
                                           <i class="material-icons">info_outline</i> Informacje
                                       </a>
                                   </li>
                                   <li class="nav-item">
-                                      <a class="nav-link" href="#zrodlo10" data-toggle="tab">
+                                      <a class="nav-link" href="#zrodlo100" data-toggle="tab">
                                           <i class="material-icons">input</i> Źródło
                                       </a>
                                   </li>
@@ -1645,12 +1645,18 @@ new Chart(document.getElementById("bar-chart-grouped2"), {
                   </div>
                   <div class="card-body ">
                       <div class="tab-content">
-                          <div class="tab-pane active" id="info10">
-                              <h5>&#9758; Wydatki przedsiębiorstw sektora farmaceutycznego na badania i rozwój wzrosły o 24% w okresie 2013-2016. </br></br>
-                                 &#9758; Inwestycje w B&R Polpharmy stanowiły ok. 40% wydatków całego sektora i miały stabilny udział w analizowanym okresie (Najedź na wykres, żeby sprawdzić dokładne wartości).
+                          <div class="tab-pane active" id="info100">
+                              <h5>&#9758; Wynagrodzenie oferowane przez Polpharmę jest
+średnio o 12% wyższe niż płaca w sektorze (w latach
+2013-2016). </br></br>
+                                 &#9758; Polpharma zatrudnia relatywnie więcej
+                                 pracowników odpowiedzialnych za badania i rozwój, a
+                                 ich płace są jeszcze wyższe (w 2015 r. średnie wynagrodzenie
+                                 pracowników tej grupy było o ponad 50% wyższe
+                                 niż przeciętna płaca w sektorze).
                                </h5>
                           </div>
-                          <div class="tab-pane" id="zrodlo10">
+                          <div class="tab-pane" id="zrodlo100">
                           <h5> &#9758; GUS (2018), <i><a target="_blank" href="http://stat.gov.pl/obszary-tematyczne/roczniki-statystyczne/roczniki-statystyczne/rocznik-statystyczny-przemyslu-2017,5,11.html"> Rocznik statystyczny przemysłu 2017</i>, dział XI.</a> </li>
                               &#9758; Dane wewnętrzne GK Polpharma. </li>
                             </h5>
