--- a/assets/charts/patenty.html
+++ b/assets/charts/patenty.html
@@ -49,7 +49,7 @@ var svg = d3.select("#svg1"),
 
 var color = d3.scaleLinear()
     .domain([0, 5])
-    .range(['#b0eaeb', '#342C69'])
+    .range(['#f1f3f4', '#174891'])
     // .range(["hsl(152,80%,80%)", "hsl(228,30%,40%)"])
     .interpolate(d3.interpolateHcl);
 
