--- a/assets/charts/zatrudnienie.html
+++ b/assets/charts/zatrudnienie.html
@@ -31,7 +31,7 @@ var pie = new d3pie("pieChart", {
 		"fontSize": 10,
 		"font": "helvetica",
 		"location": "bottom-left",
-        "text": "Źródło: GUS, Rocznik statystyczny przemysłu (2018) i  Dane wewnętrzne GK Polpharma."
+        "text": "Źródło: GUS, Rocznik statystyczny przemysłu (2018) i  Dane wewnętrzne Grupy Polpharma."
 	},
 	"size": {
 		"canvasWidth": 500,
