--- a/assets/charts/generics_map.html
+++ b/assets/charts/generics_map.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]><html class="lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 	<head>
-		<title>Eurostat JSON-stat API + Idescat Visual choropleth map example</title>
+		<title>generics map</title>
 
 		<!-- DO NOT DO THIS IN PRODUCTION -->
 		<!-- github.io and json-stat.org ARE NOT CDNs -->
